Chore(test-config): Change datasource settings
To play with h2-console

--- a/spring-6-rest-mvc/pom.xml
+++ b/spring-6-rest-mvc/pom.xml
@@ -69,7 +69,8 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.3.232</version>
-            <scope>test</scope>
+            <!-- Should normally only be scoped as a test dependency, but
+             since this is a practice app it is included a normal compile dependency.-->
         </dependency>
     </dependencies>
 
