--- a/spring-6-rest-mvc/src/main/resources/application-test.yml
+++ b/spring-6-rest-mvc/src/main/resources/application-test.yml
@@ -2,7 +2,12 @@ spring:
   h2:
     console:
       enabled: true
-
+      path: /h2-console
+  datasource:
+    url: "jdbc:h2:mem:testdb"
+    username: "sa"
+    password: ""
+    driver-class-name: org.h2.Driver
 logging:
     level:
       root: info
